--- a/src/main/resources/templates/user/transaction/updateTransfer.html
+++ b/src/main/resources/templates/user/transaction/updateTransfer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Add Transaction</title>
+    <title>Transaction</title>
     <th:block th:replace="layout/layout.html::css"></th:block>
     <th:block th:replace="layout/navbar.html::css"></th:block>
     <style>
