--- a/src/main/resources/templates/user/wallet/add.html
+++ b/src/main/resources/templates/user/wallet/add.html
@@ -25,7 +25,7 @@
                                    placeholder=" currency name ">
                             <input class="form-control" type="number" name="balance" id="balance"
                                    placeholder="balance wallet...">
-                            <input class="form-control" type="file" name="file" id="file" accept="image/*">
+<!--                            <input class="form-control" type="file" id="file" name="file" accept="image/*"/>-->
                             <div class="form-control">
                                 <label for="currencyId">Loại tiền tệ:</label>
                                 <select id="currencyId" name="currencyId" required>
