--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -2,7 +2,7 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
-    <title>Index</title>
+    <title>Home</title>
     <th:block th:fragment="css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,11 +12,12 @@
         <link rel="stylesheet" type="text/css" href="<URL_CSS>"/>
         <link href="/css/apexcharts.css" rel="stylesheet">
         <link href="/css/tooplate-mini-finance.css" rel="stylesheet">
+        <link rel="stylesheet" href="http://localhost:8080/user-photos/%3CURL_CSS%3E">
         <style>
             .nav-item-active {
                 background-color: #6fe76f;
                 border-left: 5px solid #a9d3ff;
-                width: 148px;
+                width: 167px;
                 border-radius: 13px;
                 color: white;
             }
@@ -28,7 +29,12 @@
 <th:block th:replace="layout/navbar.html::header"></th:block>
 <div class="container-fluid">
     <div class="row">
-        <th:block th:replace="layout/sidebar.html::nav"></th:block>
+        <th:block th:if="${#session.getAttribute('user').role=='admin'}">
+            <th:block th:replace="layout/sidebar.html::navAdmin"></th:block>
+        </th:block>
+        <th:block th:unless="${#session.getAttribute('user').role=='admin'}">
+            <th:block th:replace="layout/siderbarUser.html::navUser"></th:block>
+        </th:block>
         <main class="main-wrapper col-md-9 ms-sm-auto py-4 col-lg-9 px-md-4 border-start">
             <section layout:fragment="content"></section>
             <th:block th:replace="layout/footer.html::footer"></th:block>
