--- a/src/main/resources/templates/user/category/index.html
+++ b/src/main/resources/templates/user/category/index.html
@@ -15,7 +15,7 @@
     <div class="row my-4">
         <div class="col-lg-12 col-12">
             <div class="custom-block bg-white">
-                <h5 class="mb-4">Account Activities</h5>
+                <h5 class="mb-4">Category</h5>
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <a th:href="@{/category/add}" class="btn btn-success">Create Category</a>
                     <div class="my-4" style="width: 200px">
